# Nodo_Wasp

./: Comandi ISC.txt  README.md
contracts/wasm/: Cargo.toml
contracts/wasm/autenticazione/: README.md  schema.yaml
contracts/wasm/autenticazione/rs/autenticazioneimpl/src/: funcs.rs
contracts/wasm/autenticazione/test/: autenticazione_test.go
contracts/wasm/autorizzazioni/: README.md  schema.yaml
contracts/wasm/autorizzazioni/rs/autorizzazioniimpl/src/: funcs.rs
contracts/wasm/autorizzazioni/test/: autorizzazioni_test.go
contracts/wasm/gestioneapplicazioni/: README.md  schema.yaml
contracts/wasm/gestioneapplicazioni/rs/gestioneapplicazioniimpl/src/: funcs.rs
contracts/wasm/gestioneapplicazioni/test/: gestioneapplicazioni_test.go
contracts/wasm/mycontract/: schema.yaml
contracts/wasm/mycontract/rs/mycontractimpl/src/: funcs.rs
contracts/wasm/mycontract/test/: mycontract_test.go
contracts/wasm/mycontract1/: schema.yaml
contracts/wasm/mycontract1/rs/mycontract1impl/src/: funcs.rs
contracts/wasm/mycontract1/test/: mycontract1_test.go
contracts/wasm/mycontract2/: schema.yaml
contracts/wasm/mycontract2/rs/mycontract2impl/src/: funcs.rs
contracts/wasm/mycontract2/test/: mycontract2_test.go
contracts/wasm/mycontract3/: schema.yaml
contracts/wasm/mycontract3/rs/mycontract3impl/src/: funcs.rs
contracts/wasm/mycontract3/test/: mycontract3_test.go
contracts/wasm/mycontract4/: schema.yaml
contracts/wasm/mycontract4/rs/mycontract4impl/src/: funcs.rs
contracts/wasm/mycontract4/test/: mycontract4_test.go
contracts/wasm/performance/: README.md  schema.yaml
contracts/wasm/performance/rs/performanceimpl/src/: funcs.rs
contracts/wasm/performance/test/: performance_test.go
